# chimera

./: .gitignore  .mcp.json  README.md  pyproject.toml  test_direct.py
chimera/: __init__.py  cli.py  mcp_server.py
chimera/core/: browser.py  cdp.py  chimera.py  dom.py
chimera/hardware/: keyboard.py  mouse.py
chimera/humanize/: timing.py  trajectory.py  tremor.py
chimera/stealth/: launcher.py  patches.py
examples/: cdp_raw.py  form.py  navigate.py
