[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chimera"
version = "2.0.0"
description = "CDP eyes + Win32 hands — undetectable browser automation via hardware-level human-like input"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.scripts]
chimera = "chimera.cli:main"
chimera-mcp = "chimera.mcp_server:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["chimera"]

[tool.ruff]
line-length = 100
